--- a/css/styles.css
+++ b/css/styles.css
@@ -598,6 +598,17 @@ footer {
   text-align: center;
   padding: 1rem 0;
   margin-top: 2rem;
+  font-size: 0.95rem;
 }
+footer a {
+  color: #c59c6c; /* Catalyst gold */
+  font-weight: 600;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
 
 
